third_party/move/move-prover/interpreter-testsuite/tests/concrete_check/property/mono.exp
Running Move unit tests
[ FAIL    ] 0x2::Test::check_0x1_fail
[ PASS    ] 0x2::Test::check_0x2_pass

Test failures:

Failures in 0x2::Test:

┌── check_0x1_fail ──────
│ error: property does not hold
│    ┌─ tests/concrete_check/property/mono.move:50:13
│    │
│ 50 │             (Base::has_b() && has_r<T>()) ==> old(has_r<T>());
│    │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
│
│
└──────────────────

Test result: FAILED. Total tests: 2; passed: 1; failed: 1
